--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,3 +12,7 @@ requires-python = ">=3.10"
 dependencies = [
     "grpcio-tools ~= 1.68.1",  # grpcio-tools requires grpcio
 ]
+
+
+[tool.setuptools]
+packages = ["messenger"]
