--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,9 @@ __pycache__
 __pypackages__
 *.egg-info
 messenger_grpc/*_pb2.py
+messenger_grpc/*_pb2.pyi
 messenger_grpc/*_pb2_grpc.py
+messenger_grpc/*_pb2_grpc.pyi
 
 .cache
 .ccls-cache
