chore: also include the client script to the Python package.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,5 +16,8 @@ dependencies = [
 
 [tool.setuptools]
 packages = [ "messenger_grpc" ]
-script-files = [ "scripts/pyserver.py"]
+script-files = [
+    "scripts/pyserver.py",
+    "scripts/pyclient.py",
+]
 
