--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ version = "0.0.0"
 requires-python = ">=3.10"
 
 dependencies = [
-    "grpcio ~= 1.68.1"
+    "grpcio ~= 1.68.1",
+    "aioconsole  ~= 0.8.1",
 ]
 
 
