fix: rename 'src' -> 'cpp_src' to not confuse dream2nix.
Otherwise dream2nix would consider 'src' as the root for editable
modules, instead of project root.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ target_link_libraries(messenger-grpc PUBLIC
 # executables #
 ###############
 
-add_executable(cppclient "src/cppclient.cpp")
+add_executable(cppclient "cpp_src/cppclient.cpp")
 target_link_libraries(cppclient messenger-grpc)
 
 
